--- a/Pizza Shop/styling.css
+++ b/Pizza Shop/styling.css
@@ -3,6 +3,12 @@ body {
 	background-image: url('pizza.jpg'); 
 }
 
+#screenSize{
+    margin: 0% auto;
+    width: 1400px;
+}
+
+
 header {
 	font-size: 100px;
 	font-weight: 900;
@@ -11,7 +17,7 @@ header {
 }
 
 .menu {
-	width:10%;
+	width:180px;
 	height:30%;
 	background-color: white;
 	border: 4px solid;
@@ -46,7 +52,7 @@ h2 {
 
 .sub-button  {
 	cursor:pointer;
-	width:20%;
+	width:200px;
 	height:45px;
 	background-color: white;
 	border: 4px solid;
@@ -62,7 +68,7 @@ h2 {
 #cart {
 	background-color: white;
 	margin: 15px auto;
-    width: 35%;
+    width: 650px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
